force-app/main/default/objects/Batch_Process_Log__c/Batch_Process_Log__c.object-meta.xml
<CustomObject>
    <description>This object serves as the error logging object for any batch process. If batches run successfully or if they run unsuccessfully, records are logged here to ensure error log captures during an apex job run.</description>
    <label>Batch Process Log</label>
    <nameField>
        <displayFormat>BA-{0000}</displayFormat>
        <label>Batch Process Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Process Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>