force-app/main/default/objects/Batch_Process_Log__c/fields/Batch_Name__c.field-meta.xml
<CustomField>
    <fullName>Batch_Name__c</fullName>
    <description>This field stores the name of the apex batch class that created this record.</description>
    <inlineHelpText>This field stores the name of the apex batch class that created this record.</inlineHelpText>
    <label>Batch Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>