force-app/main/default/objects/Batch_Process_Log__c/fields/End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time__c</fullName>
    <description>It references when the batch processes ended.</description>
    <inlineHelpText>It stores the end date time for the batch process run.</inlineHelpText>
    <label>End Date Time</label>
    <type>DateTime</type>
</CustomField>