force-app/main/default/objects/Batch_Process_Log__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <description>It stores the log of the response that was gotten per batch process run when it fails.</description>
    <inlineHelpText>It stores the log of the response that was gotten per batch process run when it fails.</inlineHelpText>
    <label>Error</label>
    <type>TextArea</type>
</CustomField>