force-app/main/default/objects/Batch_Process_Log__c/fields/Last_Processed_Iterator__c.field-meta.xml
<CustomField>
    <fullName>Last_Processed_Iterator__c</fullName>
    <description>This saves the last processed record as a cursor in JSON format to allow flexibility for any type of object.</description>
    <inlineHelpText>This saves the last processed record as a cursor in JSON format to allow flexibility for any type of object.</inlineHelpText>
    <label>Last Processed Iterator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>