force-app/main/default/objects/Batch_Process_Log__c/fields/Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time__c</fullName>
    <description>It references when the batch process started.</description>
    <inlineHelpText>It stores the beginning date time of the batch process run.</inlineHelpText>
    <label>Start Date Time</label>
    <type>DateTime</type>
</CustomField>